#214 style: 코드 정렬