@@ -28,7 +28,6 @@ import java.time.LocalDate;
 import java.time.Month;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.floney.floney.common.constant.Status.ACTIVE;
 import static com.floney.floney.common.constant.Subscribe.DEFAULT_MAX_BOOK;
@@ -38,6 +37,7 @@ import static com.floney.floney.common.constant.Subscribe.SUBSCRIBE_MAX_BOOK;
 @Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class BookServiceImpl implements BookService {
+
     private static final int OWNER = 1;
     private static final long DEFAULT_BUDGET = 0L;
 
@@ -82,7 +82,7 @@ public class BookServiceImpl implements BookService {
         User user = userDetails.getUser();
 
         Book book = bookRepository.findBookExclusivelyByCodeAndStatus(code, ACTIVE)
-            .orElseThrow(() -> new NotFoundBookException(code));
+                .orElseThrow(() -> new NotFoundBookException(code));
 
         // 현 유저의 가계부 참여 개수 체크
         checkCreateBookMaximum(user);
@@ -200,10 +200,10 @@ public class BookServiceImpl implements BookService {
 
         final List<User> users = new ArrayList<>(List.of(userDetails.getUser()));
         users.addAll(findAllByBookAndStatus(bookKey)
-            .stream()
-            .map(BookUser::getUser)
-            .filter(user -> !user.getEmail().equals(userDetails.getUsername()))
-            .toList());
+                .stream()
+                .map(BookUser::getUser)
+                .filter(user -> !user.getEmail().equals(userDetails.getUsername()))
+                .toList());
 
         return userToResponse(users);
     }
@@ -247,18 +247,18 @@ public class BookServiceImpl implements BookService {
         bookLineCategoryRepository.deleteBookLineCategory(bookKey);
 
         categoryRepository.findAllCustomCategory(book)
-            .stream()
-            .map(BookCategory::delete)
-            .forEach(categoryRepository::delete);
+                .stream()
+                .map(BookCategory::delete)
+                .forEach(categoryRepository::delete);
 
         settlementRepository.deleteAllSettlement(bookKey);
         bookLineRepository.deleteAllLines(bookKey);
         carryOverRepository.deleteAllCarryOver(bookKey);
 
         List<Budget> initBudgets = budgetRepository.findAllByBook(book)
-            .stream()
-            .map(Budget::initMoney)
-            .toList();
+                .stream()
+                .map(Budget::initMoney)
+                .toList();
         budgetRepository.saveAll(initBudgets);
 
         return bookRepository.save(book);
@@ -274,7 +274,7 @@ public class BookServiceImpl implements BookService {
     @Transactional(readOnly = true)
     public BookInfoResponse getBookInfoByCode(String code) {
         Book book = bookRepository.findBookExclusivelyByCodeAndStatus(code, ACTIVE)
-            .orElseThrow(() -> new NotFoundBookException(code));
+                .orElseThrow(() -> new NotFoundBookException(code));
         long memberCount = bookUserRepository.countInBookExclusively(book);
         return BookInfoResponse.of(book, memberCount);
     }
@@ -324,8 +324,13 @@ public class BookServiceImpl implements BookService {
     @Override
     @Transactional
     public void saveAlarm(SaveAlarmRequest request) {
-        BookUser bookUser = bookUserRepository.findBookUserByEmail(request.getUserEmail(), request.getBookKey());
-        Alarm alarm = Alarm.of(findBook(request.getBookKey()), bookUser, request);
+        final String bookKey = request.getBookKey();
+        final String userEmail = request.getUserEmail();
+
+        final BookUser bookUser = bookUserRepository.findBookUserByEmailAndBookKey(userEmail, bookKey)
+                .orElseThrow(() -> new NotFoundBookUserException(bookKey, userEmail));
+
+        final Alarm alarm = Alarm.of(findBook(bookKey), bookUser, request);
         alarmRepository.save(alarm);
     }
 
@@ -333,18 +338,20 @@ public class BookServiceImpl implements BookService {
     @Transactional
     public void updateAlarmReceived(UpdateAlarmReceived request) {
         Alarm alarm = alarmRepository.findById(request.getId())
-            .orElseThrow(() -> new NotFoundAlarmException(request.getId()));
+                .orElseThrow(() -> new NotFoundAlarmException(request.getId()));
         alarm.updateReceived(request.isReceived());
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<AlarmResponse> getAlarmByBook(String bookKey, String email) {
-        BookUser bookUser = bookUserRepository.findBookUserByEmail(email, bookKey);
+        final BookUser bookUser = bookUserRepository.findBookUserByEmailAndBookKey(email, bookKey)
+                .orElseThrow(() -> new NotFoundBookUserException(bookKey, email));
+
         return alarmRepository.findAllByBookAndBookUser(findBook(bookKey), bookUser)
-            .stream()
-            .map(AlarmResponse::of).
-            collect(Collectors.toList());
+                .stream()
+                .map(AlarmResponse::of)
+                .toList();
     }
 
     private Map<Month, Long> getInitBudgetFrame() {
@@ -357,7 +364,7 @@ public class BookServiceImpl implements BookService {
 
     private Book findBook(String bookKey) {
         return bookRepository.findBookByBookKeyAndStatus(bookKey, ACTIVE)
-            .orElseThrow(() -> new NotFoundBookException(bookKey));
+                .orElseThrow(() -> new NotFoundBookException(bookKey));
     }
 
     private void isValidToDeleteBook(Book book, String email) {
@@ -370,8 +377,8 @@ public class BookServiceImpl implements BookService {
 
     private List<BookUserResponse> userToResponse(final List<User> users) {
         return users.stream()
-            .map(BookUserResponse::from)
-            .toList();
+                .map(BookUserResponse::from)
+                .toList();
     }
 
     private List<BookUser> findAllByBookAndStatus(String bookKey) {
@@ -385,12 +392,12 @@ public class BookServiceImpl implements BookService {
 
     private BookUser findBookUserByKey(String userEmail, String bookKey) {
         return bookUserRepository.findBookUserByKey(userEmail, bookKey)
-            .orElseThrow(() -> new NotFoundBookUserException(bookKey, userEmail));
+                .orElseThrow(() -> new NotFoundBookUserException(bookKey, userEmail));
     }
 
     private Book findBook(String userEmail, String bookKey) {
         return bookRepository.findByBookUserEmailAndBookKey(userEmail, bookKey)
-            .orElseThrow(() -> new NotFoundBookException(bookKey));
+                .orElseThrow(() -> new NotFoundBookException(bookKey));
     }
 
     private void deleteBookLineBy(BookUser bookUser, String bookKey) {
